@@ -10047,13 +10047,19 @@ Ready.
 [ "geom",	"mbrRight",	"command geom.mbrRight(geom1:wkb,geom2:wkb):bit ",	"mbrRight_wkb;",	"Returns true if the mbr of geom1 is right of the mbr of geom2"	]
 [ "geom",	"prelude",	"command geom.prelude():void ",	"geom_prelude;",	""	]
 [ "geom",	"setSRID",	"command geom.setSRID(w:wkb,srid:int):wkb ",	"wkbSetSRID;",	"Sets the Reference System ID for this Geometry."	]
+[ "group",	"group",	"command group.group(b:bat[:any_1]) (groups:bat[:oid],extents:bat[:oid],histo:bat[:lng]) ",	"GRPgroup1;",	""	]
+[ "group",	"group",	"command group.group(b:bat[:any_1],s:bat[:oid]) (groups:bat[:oid],extents:bat[:oid],histo:bat[:lng]) ",	"GRPgroup2;",	""	]
+[ "group",	"groupdone",	"command group.groupdone(b:bat[:any_1]) (groups:bat[:oid],extents:bat[:oid],histo:bat[:lng]) ",	"GRPgroup1;",	""	]
+[ "group",	"groupdone",	"command group.groupdone(b:bat[:any_1],s:bat[:oid]) (groups:bat[:oid],extents:bat[:oid],histo:bat[:lng]) ",	"GRPgroup2;",	""	]
 [ "group",	"multicolumn",	"pattern group.multicolumn(b:bat[:any]...) (ref:bat[:oid],grp:bat[:oid],hist:bat[:any]) ",	"GROUPmulticolumngroup;",	"Derivation of a group index over multiple columns."	]
-[ "group",	"subgroup",	"command group.subgroup(b:bat[:any_1]) (groups:bat[:oid],extents:bat[:oid],histo:bat[:lng]) ",	"GRPsubgroup1;",	""	]
 [ "group",	"subgroup",	"command group.subgroup(b:bat[:any_1],g:bat[:oid]) (groups:bat[:oid],extents:bat[:oid],histo:bat[:lng]) ",	"GRPsubgroup2;",	""	]
-[ "group",	"subgroup",	"command group.subgroup(b:bat[:any_1],g:bat[:oid],e:bat[:oid],h:bat[:lng]) (groups:bat[:oid],extents:bat[:oid],histo:bat[:lng]) ",	"GRPsubgroup3;",	""	]
-[ "group",	"subgroupdone",	"command group.subgroupdone(b:bat[:any_1]) (groups:bat[:oid],extents:bat[:oid],histo:bat[:lng]) ",	"GRPsubgroup1;",	""	]
+[ "group",	"subgroup",	"command group.subgroup(b:bat[:any_1],s:bat[:oid],g:bat[:oid]) (groups:bat[:oid],extents:bat[:oid],histo:bat[:lng]) ",	"GRPsubgroup3;",	""	]
+[ "group",	"subgroup",	"command group.subgroup(b:bat[:any_1],g:bat[:oid],e:bat[:oid],h:bat[:lng]) (groups:bat[:oid],extents:bat[:oid],histo:bat[:lng]) ",	"GRPsubgroup4;",	""	]
+[ "group",	"subgroup",	"command group.subgroup(b:bat[:any_1],s:bat[:oid],g:bat[:oid],e:bat[:oid],h:bat[:lng]) (groups:bat[:oid],extents:bat[:oid],histo:bat[:lng]) ",	"GRPsubgroup5;",	""	]
 [ "group",	"subgroupdone",	"command group.subgroupdone(b:bat[:any_1],g:bat[:oid]) (groups:bat[:oid],extents:bat[:oid],histo:bat[:lng]) ",	"GRPsubgroup2;",	""	]
-[ "group",	"subgroupdone",	"command group.subgroupdone(b:bat[:any_1],g:bat[:oid],e:bat[:oid],h:bat[:lng]) (groups:bat[:oid],extents:bat[:oid],histo:bat[:lng]) ",	"GRPsubgroup3;",	""	]
+[ "group",	"subgroupdone",	"command group.subgroupdone(b:bat[:any_1],s:bat[:oid],g:bat[:oid]) (groups:bat[:oid],extents:bat[:oid],histo:bat[:lng]) ",	"GRPsubgroup3;",	""	]
+[ "group",	"subgroupdone",	"command group.subgroupdone(b:bat[:any_1],g:bat[:oid],e:bat[:oid],h:bat[:lng]) (groups:bat[:oid],extents:bat[:oid],histo:bat[:lng]) ",	"GRPsubgroup4;",	""	]
+[ "group",	"subgroupdone",	"command group.subgroupdone(b:bat[:any_1],s:bat[:oid],g:bat[:oid],e:bat[:oid],h:bat[:lng]) (groups:bat[:oid],extents:bat[:oid],histo:bat[:lng]) ",	"GRPsubgroup5;",	""	]
 [ "gsl",	"chi2prob",	"command gsl.chi2prob(d:dbl,i:dbl):dbl ",	"GSLchisqProb;",	"Chi Squared probability"	]
 [ "identifier",	"#fromstr",	"command identifier.#fromstr():void ",	"IDfromString;",	"Convert a string to an identifier without any check"	]
 [ "identifier",	"#tostr",	"command identifier.#tostr():void ",	"IDtoString;",	"Convert identifier to string equivalent"	]
