@@ -1,6 +1,11 @@
 # ChangeLog file for MonetDB5
 # This file is updated with Maddlog
 
+* Tue Dec 13 2016 Sjoerd Mullender <sjoerd@acm.org>
+- group.subgroup is now called group.group if it is not refining a group.
+  Both group.group and group.subgroup now also have variants with a
+  candidate list.
+
 * Tue Nov  8 2016 Martin Kersten <mk@cwi.nl>
 - The allocation schemes for MAL blocks and Variables has been turned
   into block-based.  This reduces the number of malloc()/free() calls.
